+ features
* bugfixes
============== 1.0.0-dev (unreleased) ==============
Gameplay:
 + Hand-drawn maps can now be scaled with slider
 + Slightly longer delays between turns to make it easier to follow the game
 + Track high scores in singleplayer challenges
 + Show check mark for completed scenarios, challenges and trainings
 + Training/challenge/scenario menu now supports team selection
 * Fix hedgehogs being pushed around (and other collision bugs) when they overlap
 * Fix homing bee flying weird if passing wrap world edge or target was placed beyond it
 * Fix poison damage not working in first round
 * Use player-chosen team identity in campaigns and singleplayer missions
 * Fix player-chosen teams ignoring custom team controls in campaigns
 * Fix broken behaviour of airborne attacks when placed near bounce world edge
 * Deny placement of airborne attack in “impossible” places in maps with bounce world edge
 * Deny placement of piano beyond bounce world edge

Styles and schemes:
 + The Specialists: Unlock game scheme
 + The Specialists: Add script parameter support to set custom specialists order
 * Balanced Random Weapon: Fix Lua errors after using Time Box
 * Racer: Fix racer ghost not getting reset after a skip
 * King Mode: Fix team sometimes not being killed properly if king drowned
 * King Mode: Kill resurrected minions if king is not alive

A Classic Fairytale:
 * First blood: Fix Lua error when hitting Attack after failing the rope challenge

A Space Adventure:
 + Show your current records at mission start when re-playing one of the challenges
 + Spacetrip: Move flowers of desert planet above cactus
 * Searching in the dust: Fix mission ending when all smugglers are dead
 * Chasing the blue hog: Fix player not losing the race when timing out while still having the rope
 * Chasing the blue hog: Fix player winning if Crazy Runner died
 * Various minor tweaks and bugfixes

Controls:
 + Add control to unselect current weapon (no key chosen by default)