@@ -7,6 +7,7 @@ Gameplay:
  + Track high scores in singleplayer challenges
  + Show check mark for completed scenarios, challenges and trainings
  + Training/challenge/scenario menu now supports team selection
+ + Most target practices now highlight position of next target (must be unlocked first)
  * Fix hedgehogs being pushed around (and other collision bugs) when they overlap
  * Fix homing bee flying weird if passing wrap world edge or target was placed beyond it
  * Fix poison damage not working in first round
